fix: scroll to top on route change and adjust footer style on mobile

--- a/src/components/CommonFooter/styles.module.scss
+++ b/src/components/CommonFooter/styles.module.scss
@@ -17,6 +17,9 @@
   .logo {
     width: 80px;
     height: 24px;
+    img {
+      vertical-align: unset;
+    }
   }
   .linkList {
     display: flex;
